--- a/Result-new.html
+++ b/Result-new.html
@@ -299,7 +299,7 @@
   if (topArchetype === "The Provoker") fileSafe = "the_provoker";
 
   const imagePath = `images/${fileSafe}_${genderSuffix}.jpg`;
-  const profilePath = `/premium/erotic-blueprint_${fileSafe === "claimed__trained" ? "claimed_and_trained" : fileSafe}.html`;
+  const profilePath = `/premium/erotic-blueprint_${fileSafe === "claimed_and_trained" ? "claimed_and_trained" : fileSafe}.html`;
 
   // Set background color
   const resultBody = document.getElementById("resultBody");
