--- a/Signin.html
+++ b/Signin.html
@@ -8,111 +8,112 @@
   <style>
     body {
       margin: 0;
-      padding: 40px 20px;
       font-family: 'Montserrat', sans-serif;
       background-color: #1a1a1a;
-      color: white;
-      text-align: center;
     }
 
-    .logo {
+    .border-wrapper {
+      padding: 12px;
+      background: linear-gradient(to right, #950606, #064D95, #06954E, #064D95, #950606);
+      min-height: 100vh;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      background-color: #1a1a1a;
+      color: white;
+      max-width: 600px;
+      width: 100%;
+      border-radius: 14px;
+      padding: 40px 30px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    }
+
+    img.logo {
       max-width: 120px;
-      display: block;
       margin: 0 auto 30px auto;
+      display: block;
     }
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.4rem;
+      font-weight: bold;
+      margin-bottom: 16px;
       color: #e1bf78;
-      margin-bottom: 10px;
     }
 
-    p.subtitle {
-      font-size: 1.2rem;
-      margin-bottom: 40px;
-      color: #ccc;
-    }
-
-    .button-wrapper {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      max-width: 400px;
-      margin: 0 auto;
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+      color: white;
     }
 
     button {
-      font-size: 1.2rem;
-      font-weight: bold;
-      padding: 16px 24px;
-      border-radius: 10px;
-      border: 2px solid #e1bf78;
       background-color: transparent;
+      border: 2px solid #e1bf78;
       color: #e1bf78;
+      font-size: 1.1rem;
+      padding: 14px 28px;
+      margin: 10px;
+      border-radius: 8px;
+      font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      transition: background-color 0.2s ease;
     }
 
     button:hover {
-      background-color: rgba(255, 215, 0, 0.1);
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
-    .legal-box {
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: #aaa;
-      line-height: 1.6;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
+    .legal {
+      font-size: 0.85rem;
+      opacity: 0.7;
+      margin-top: 30px;
+      line-height: 1.5;
     }
 
-    .continue-box {
-      margin-top: 20px;
+    .legal a {
+      color: #e1bf78;
+      text-decoration: underline;
     }
 
-    .continue-box button {
-      background-color: #e1bf78;
-      color: #1a1a1a;
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      button {
+        width: 100%;
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
 <body>
+  <div class="border-wrapper">
+    <div class="container">
+      <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
 
-  <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+      <h1>Choose How You Want to Sign In</h1>
+      <p>Whether you're feeling bold or staying discreet, we've got the perfect mode for you.</p>
 
-  <h1>Choose Your Mode</h1>
-  <p class="subtitle">How do you want to show up today?</p>
+      <a href="verified-profile.html">
+        <button>I want to be Verified</button>
+      </a>
+      <a href="anonymous-profile.html">
+        <button>I want to stay Anonymous</button>
+      </a>
 
-  <div class="button-wrapper" id="mode-buttons" style="display: none;">
-    <button onclick="window.location.href='verified-profile.html'">👑 Verified Mode (Recommended)</button>
-    <button onclick="window.location.href='anonymous-profile.html'">😎 Anonymous Mode</button>
-  </div>
-
-  <div class="legal-box" id="legalNotice">
-    <p>
-      By continuing, you agree that you are at least 18 years old. Le Libido is not responsible for the actions of its users.
-      Anonymous accounts can only view other anonymous users. Verified users are subject to multi-factor ID confirmation.
-    </p>
-    <p>
-      We collect IP address, timestamp, and device information for safety, moderation, and fraud prevention. By clicking continue, you accept these terms.
-    </p>
-
-    <div class="continue-box">
-      <button onclick="acceptNotice()">Continue</button>
+      <div class="legal">
+        By continuing, you acknowledge that you are over 18 and agree to our
+        <a href="/legal.html" target="_blank">Terms and Conditions</a> and <a href="/privacy.html" target="_blank">Privacy Policy</a>.
+        This platform uses device fingerprinting and IP tracking to enforce community standards and protect against misuse. All logins are timestamped and monitored for safety.
+      </div>
     </div>
   </div>
-
-  <script>
-    function acceptNotice() {
-      document.getElementById('legalNotice').style.display = 'none';
-      document.getElementById('mode-buttons').style.display = 'flex';
-
-      // Placeholder for logging IP/device/timestamp
-      console.log("Logging: IP + Timestamp + Device ID");
-      // Add backend logging here in production
-    }
-  </script>
-
 </body>
 </html>
