--- a/Signin.html
+++ b/Signin.html
@@ -3,113 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign In — Le Libido</title>
+  <title>Le Libido – Sign In</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
       background-color: #0d0d0d;
       color: white;
-      padding: 40px 20px;
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+      padding: 50px 20px;
       border: 8px solid #e1bf78;
       box-sizing: border-box;
     }
 
     img.logo {
       max-width: 120px;
-      display: block;
-      margin: 0 auto 30px auto;
+      margin-bottom: 30px;
     }
 
     h1 {
-      font-size: 2.6rem;
-      font-weight: bold;
-      text-align: center;
+      font-size: 2.4rem;
       margin-bottom: 10px;
     }
 
     .tagline {
-      text-align: center;
       font-size: 1.1rem;
       font-style: italic;
       color: #e1bf78;
       margin-bottom: 40px;
     }
 
-    .section {
-      max-width: 720px;
-      margin: 0 auto 40px auto;
-    }
-
-    .section h2 {
-      font-size: 1.4rem;
-      font-weight: bold;
-      color: #e1bf78;
-      margin-bottom: 10px;
-      text-transform: uppercase;
-    }
-
-    .section ul {
-      list-style: none;
-      padding-left: 0;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-
-    .section ul li::before {
-      content: "• ";
-      color: #e1bf78;
-    }
-
-    .section p {
-      font-size: 1rem;
-      line-height: 1.6;
-      opacity: 0.9;
-    }
-
     .button-container {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      align-items: center;
-      margin-bottom: 50px;
+      max-width: 400px;
+      margin: 0 auto 40px auto;
     }
 
     .signin-btn {
       padding: 14px 28px;
       font-size: 1.1rem;
       font-weight: bold;
-      background-color: transparent;
       border: 2px solid #e1bf78;
       color: #e1bf78;
-      border-radius: 8px;
+      background: transparent;
+      border-radius: 10px;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color 0.3s;
     }
 
     .signin-btn:hover {
-      background-color: rgba(225, 191, 120, 0.15);
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
     .legal-box {
-      background-color: rgba(255, 255, 255, 0.08);
-      border: 1px solid #e1bf78;
-      border-radius: 8px;
-      padding: 20px;
-      max-width: 720px;
-      margin: 0 auto;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #ccc;
+      opacity: 0.8;
+      max-width: 600px;
+      margin: 30px auto 0 auto;
       line-height: 1.5;
     }
 
     footer {
-      text-align: center;
-      margin-top: 60px;
       font-size: 0.8rem;
-      color: #888;
+      color: #999;
+      margin-top: 40px;
     }
 
     footer a {
@@ -129,56 +90,7 @@
   <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>TURNED ON WHEN YOU GO OUT</h1>
-  <div class="tagline">Find someone that’s also ready to meet in real life.</div>
-
-  <div class="section">
-    <p>
-      Le Libido is the dating app that only works when you’re out in the world. 
-      You check into a real location—a bar, a café, even a neighborhood—and the app activates, 
-      showing you who else is nearby and open to making a connection right here and right now.
-    </p>
-    <p>
-      No swiping. No ghosting. Just instant IRL connection with real people, in real places, in real time.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>How it works</h2>
-    <ul>
-      <li>You check into a location to activate the app</li>
-      <li>Choose between Approach Mode or Be Approached Mode</li>
-      <li>Get notified when someone compatible is nearby</li>
-      <li>Tap a photo bubble on the map to make your move</li>
-      <li>Every match is based on real-time proximity + sexual psychology</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Why it's different</h2>
-    <p>
-      Most dating apps keep you stuck inside scrolling strangers. 
-      Le Libido is built for spontaneity and serendipity.
-    </p>
-    <ul>
-      <li>You can’t use it at home</li>
-      <li>You can’t match unless you’re checked in</li>
-      <li>You can’t fake interest or location</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Pricing</h2>
-    <p>
-      Right now, the app is <strong>completely free</strong> while we grow our early community. 
-      All features are unlocked—no paywalls, no pressure. 
-      Premium tiers will be introduced later. For now, just show up.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Ready to meet someone in real life?</h2>
-    <p>Check in and see who’s checking you out.</p>
-  </div>
+  <div class="tagline">Find someone who’s ready to meet—in real life.</div>
 
   <div class="button-container">
     <a href="profile-verified.html" class="signin-btn">Verified Sign-In</a>
@@ -186,17 +98,15 @@
   </div>
 
   <div class="legal-box">
-    <strong>Legal Notice:</strong><br>
     By continuing, you confirm you are 18+ and agree to use Le Libido responsibly. 
-    You understand that all meetups are voluntary and at your own risk. 
-    Le Libido is not liable for the actions of users. We log IP addresses, device IDs, and timestamps 
-    to help prevent abuse. Verified accounts require multi-factor authentication. 
-    We do not sell or share your data.
+    We log IPs, device IDs, and timestamps to detect abuse. 
+    Verified sign-ins require multi-factor authentication. 
+    All meetups are voluntary and at your own risk.
   </div>
 
   <footer>
     © 2025 Le Libido. All rights reserved. |
-    <a href="/legal.html">Full Legal Policy</a>
+    <a href="/legal.html">Legal Policy</a>
   </footer>
 </body>
 </html>
