--- a/Signin.html
+++ b/Signin.html
@@ -89,8 +89,8 @@
 <body>
   <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <h1>TURNED ON WHEN YOU GO OUT</h1>
-  <div class="tagline">Find someone who’s ready to meet—in real life.</div>
+  <h1>THE DATING APP THAT GETS TURNED ON WHEN YOU GO OUT</h1>
+  <div class="tagline">Find someone that's also ready to meet in real life.</div>
 
   <div class="button-container">
     <a href="profile-verified.html" class="signin-btn">Verified Sign-In</a>
