--- a/Signin.html
+++ b/Signin.html
@@ -25,6 +25,21 @@
     h1 {
       font-size: 2.4rem;
       margin-bottom: 10px;
+      line-height: 1.4;
+    }
+
+    .headline-subtle {
+      font-size: 1.1rem;
+      font-weight: 400;
+      opacity: 0.75;
+    }
+
+    .headline-bold {
+      font-size: 2.6rem;
+      font-weight: 700;
+      color: #e1bf78;
+      display: block;
+      margin-top: 4px;
     }
 
     .tagline {
@@ -89,7 +104,11 @@
 <body>
   <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <h1>THE DATING APP THAT GETS TURNED ON WHEN YOU GO OUT</h1>
+  <h1>
+    <span class="headline-subtle">The dating app that gets</span><br>
+    <span class="headline-bold">turned on when you go out</span>
+  </h1>
+
   <div class="tagline">Find someone that's also ready to meet in real life.</div>
 
   <div class="button-container">
