--- a/Signin.html
+++ b/Signin.html
@@ -24,28 +24,61 @@
 
     h1 {
       font-size: 2.4rem;
+      font-weight: 600;
+      line-height: 1.3;
       margin-bottom: 10px;
-      line-height: 1.4;
     }
 
-    .headline-subtle {
-      font-size: 1.1rem;
-      font-weight: 400;
-      opacity: 0.75;
-    }
-
-    .headline-bold {
-      font-size: 2.6rem;
+    .heating-text {
       font-weight: 700;
-      color: #e1bf78;
-      display: block;
-      margin-top: 4px;
+      text-transform: uppercase;
+      font-size: 2.4rem;
+      animation: heatPulse 3s ease-in-out infinite;
+      position: relative;
+      display: inline-block;
+    }
+
+    @keyframes heatPulse {
+      0%, 100% {
+        color: #e1bf78;
+        text-shadow: 0 0 5px #e1bf78, 0 0 15px #950606;
+      }
+      50% {
+        color: #950606;
+        text-shadow: 0 0 10px #950606, 0 0 25px #e1bf78;
+      }
+    }
+
+    .heating-text::after {
+      content: '';
+      position: absolute;
+      top: -30px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 120%;
+      height: 60px;
+      background: radial-gradient(ellipse at center, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0) 80%);
+      opacity: 0.2;
+      animation: smokeRise 5s linear infinite;
+      filter: blur(12px);
+      pointer-events: none;
+    }
+
+    @keyframes smokeRise {
+      0% {
+        transform: translateX(-50%) translateY(0) scaleX(1);
+        opacity: 0.15;
+      }
+      100% {
+        transform: translateX(-50%) translateY(-40px) scaleX(1.2);
+        opacity: 0;
+      }
     }
 
     .tagline {
       font-size: 1.1rem;
       font-style: italic;
-      color: #e1bf78;
+      color: white;
       margin-bottom: 40px;
     }
 
@@ -105,8 +138,8 @@
   <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>
-    <span class="headline-subtle">The dating app that gets</span><br>
-    <span class="headline-bold">turned on when you go out</span>
+    <span style="opacity: 0.85;">The dating app that gets</span><br>
+    <span class="heating-text">TURNED ON WHEN YOU GO OUT</span>
   </h1>
 
   <div class="tagline">Find someone that's also ready to meet in real life.</div>
