--- a/Signin.html
+++ b/Signin.html
@@ -24,9 +24,8 @@
 
     h1 {
       font-size: 2.4rem;
-      font-weight: 600;
-      line-height: 1.3;
       margin-bottom: 10px;
+      line-height: 1.3;
     }
 
     .heating-text {
@@ -36,41 +35,43 @@
       animation: heatPulse 3s ease-in-out infinite;
       position: relative;
       display: inline-block;
+      color: #e1bf78;
+      text-shadow: 0 0 5px #e1bf78, 0 0 10px #e1bf78;
     }
 
     @keyframes heatPulse {
       0%, 100% {
         color: #e1bf78;
-        text-shadow: 0 0 5px #e1bf78, 0 0 15px #950606;
+        text-shadow: 0 0 6px #e1bf78, 0 0 16px #e1bf78;
       }
       50% {
-        color: #950606;
-        text-shadow: 0 0 10px #950606, 0 0 25px #e1bf78;
+        color: #ff4d4d;
+        text-shadow: 0 0 8px #ff4d4d, 0 0 20px #ff4d4d;
       }
     }
 
-    .heating-text::after {
+    .heating-text::before {
       content: '';
       position: absolute;
-      top: -30px;
+      top: -10px;
       left: 50%;
-      transform: translateX(-50%);
-      width: 120%;
+      width: 60%;
       height: 60px;
-      background: radial-gradient(ellipse at center, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0) 80%);
-      opacity: 0.2;
-      animation: smokeRise 5s linear infinite;
-      filter: blur(12px);
+      background: radial-gradient(ellipse at center, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0) 80%);
+      opacity: 0.3;
+      transform: translateX(-50%);
+      animation: smokeRise 3s ease-out infinite;
+      filter: blur(8px);
       pointer-events: none;
     }
 
     @keyframes smokeRise {
       0% {
-        transform: translateX(-50%) translateY(0) scaleX(1);
-        opacity: 0.15;
+        transform: translateX(-50%) translateY(0) scale(1);
+        opacity: 0.25;
       }
       100% {
-        transform: translateX(-50%) translateY(-40px) scaleX(1.2);
+        transform: translateX(-50%) translateY(-60px) scale(1.4);
         opacity: 0;
       }
     }
