--- a/Signin.html
+++ b/Signin.html
@@ -29,14 +29,14 @@
     }
 
     .heating-text {
+      position: relative;
+      display: inline-block;
+      color: #e1bf78;
       font-weight: 700;
       text-transform: uppercase;
       font-size: 2.4rem;
       animation: heatPulse 3s ease-in-out infinite;
-      position: relative;
-      display: inline-block;
-      color: #e1bf78;
-      text-shadow: 0 0 5px #e1bf78, 0 0 10px #e1bf78;
+      text-shadow: 0 0 6px #e1bf78, 0 0 16px #e1bf78;
     }
 
     @keyframes heatPulse {
@@ -50,28 +50,43 @@
       }
     }
 
-    .heating-text::before {
-      content: '';
+    .smoke {
       position: absolute;
-      top: -10px;
-      left: 50%;
-      width: 60%;
+      bottom: 100%;
+      width: 20px;
       height: 60px;
-      background: radial-gradient(ellipse at center, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0) 80%);
-      opacity: 0.3;
-      transform: translateX(-50%);
-      animation: smokeRise 3s ease-out infinite;
-      filter: blur(8px);
+      background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 80%);
+      filter: blur(6px);
+      opacity: 0;
       pointer-events: none;
     }
 
-    @keyframes smokeRise {
+    .wisp1 {
+      left: 20%;
+      animation: smokeTrail 3s ease-in-out infinite;
+    }
+
+    .wisp2 {
+      left: 50%;
+      animation: smokeTrail 4s ease-in-out infinite 1s;
+    }
+
+    .wisp3 {
+      left: 80%;
+      animation: smokeTrail 3.5s ease-in-out infinite 0.5s;
+    }
+
+    @keyframes smokeTrail {
       0% {
-        transform: translateX(-50%) translateY(0) scale(1);
-        opacity: 0.25;
+        transform: translateY(0) scale(1) rotate(0deg);
+        opacity: 0.2;
+      }
+      50% {
+        transform: translateY(-30px) scale(1.2) rotate(5deg);
+        opacity: 0.4;
       }
       100% {
-        transform: translateX(-50%) translateY(-60px) scale(1.4);
+        transform: translateY(-60px) scale(1.4) rotate(-5deg);
         opacity: 0;
       }
     }
@@ -80,6 +95,7 @@
       font-size: 1.1rem;
       font-style: italic;
       color: white;
+      opacity: 0.85;
       margin-bottom: 40px;
     }
 
@@ -139,8 +155,13 @@
   <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>
-    <span style="opacity: 0.85;">The dating app that gets</span><br>
-    <span class="heating-text">TURNED ON WHEN YOU GO OUT</span>
+    <span style="font-weight: 400; font-size: 1.3rem; display: block;">The dating app that gets</span>
+    <span class="heating-text">
+      TURNED ON WHEN YOU GO OUT
+      <span class="smoke wisp1"></span>
+      <span class="smoke wisp2"></span>
+      <span class="smoke wisp3"></span>
+    </span>
   </h1>
 
   <div class="tagline">Find someone that's also ready to meet in real life.</div>
@@ -151,10 +172,10 @@
   </div>
 
   <div class="legal-box">
-    By continuing, you confirm you are 18+ and agree to use Le Libido responsibly. 
-    We log IPs, device IDs, and timestamps to detect abuse. 
-    Verified sign-ins require multi-factor authentication. 
-    All meetups are voluntary and at your own risk.
+    By continuing, you confirm you are 18+ and agree to use Le Libido responsibly.
+    We log IPs, device IDs, and timestamps to detect abuse. Verified sign-ins require multi-factor authentication. 
+    All meetups are voluntary and at your own risk. Le Libido is not liable for user behavior, off-site interactions, or in-person meetings. 
+    Please stay safe and trust your instincts.
   </div>
 
   <footer>
