--- a/Result-new.html
+++ b/Result-new.html
@@ -65,6 +65,32 @@
       background-color: rgba(255, 255, 255, 0.1);
     }
 
+    .heat-button {
+  padding: 14px 32px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  font-style: italic;
+  color: #e1bf78;
+  background-color: transparent;
+  border: 2px solid #e1bf78;
+  border-radius: 12px;
+  cursor: pointer;
+  animation: pulseGlow 3s infinite ease-in-out;
+  transition: background-color 0.3s ease;
+}
+
+@keyframes pulseGlow {
+  0%, 100% {
+    transform: scale(1);
+    box-shadow: 0 0 10px rgba(225, 191, 120, 0.5),
+                0 0 20px rgba(225, 191, 120, 0.3);
+  }
+  50% {
+    transform: scale(1.06);
+    box-shadow: 0 0 16px rgba(225, 191, 120, 0.7),
+                0 0 32px rgba(225, 191, 120, 0.4);
+  }
+}
     .archetype-name {
       font-weight: bold;
       font-size: 2.4rem;
@@ -140,14 +166,12 @@
          style="max-width: 120px; display: block; margin: 0 auto;" />
   </div>
 
-  <!-- Date Now button -->
-  <div style="margin-bottom: 30px;">
-    <a href="/profile.html">
-      <button style="background-color: #e1bf78; color: #950606; font-weight: bold;">
-        DATE NOW
-      </button>
-    </a>
-  </div>
+  <!-- Date Now button with heat animation -->
+<div style="margin-bottom: 30px;">
+  <a href="/signin.html">
+    <button class="heat-button">DATE NOW</button>
+  </a>
+</div>
 
   <!-- Title and Archetype Output -->
   <div class="title">Your sexual profile is:</div>
